# zoho-iot-sdk-c

./: .gitignore  CMakeLists.txt  README.md  setup.sh
cmake/: CodeCoverage.cmake  internalFuncs.cmake  libopenssl.cmake  zlib.cmake
cmake/patches/: paho_1.3.patch
cmake/setup/: CMakeLists.txt
cross-compile/OpenWRT/: README.md  toolchain.cmake
cross-compile/raspberry_pi/: README.md  toolchain.cmake
include/: generic.h  iot_client.h  log.h  message_handler.h  sdk_version.h  tls_config.h  tls_network.h  utils.h  zclient_constants.h  zoho_iot_client.h  zoho_log.h  zoho_message_handler.h  zoho_utils.h
lib/: CMakeLists.txt
lib/paho.mqtt/MQTTClient-C/src/: MQTTClient.c  MQTTClient.h
lib/paho.mqtt/MQTTClient-C/src/linux/: MQTTLinux.c
projects/: CMakeLists.txt
projects/basic/: basic.c
projects/lib/: libmodbus.cmake  pigpio.cmake
projects/modbusRequest/: CMakeLists.txt  modbusRequest.c
projects/ota_basic_example/: CMakeLists.txt  ota_basic.c
projects/ota_basic_example/ota_package_build/: z_ota_package_builder.sh
projects/ota_basic_example/ota_package_build/zoho_iot_ota/: zoho_iot_ota.service  zparent.sh  zupdate.sh
projects/ota_deb_example/: CMakeLists.txt  ota_deb.c
projects/ota_deb_example/deb_package_build/: z_deb_package_builder.sh
projects/ota_deb_example/deb_package_build/zoho_iot_ota/DEBIAN/: control  postinst  preinst  prerm
projects/ota_deb_example/deb_package_build/zoho_iot_ota/etc/systemd/system/: zoho_iot_deb.service
projects/ota_deb_example/ota_package_build/zoho_iot_ota/: zparent.sh  zupdate.sh
projects/rpi5_gpio/: CMakeLists.txt  rpi5_gpio.c
projects/rpiGPIO/: CMakeLists.txt  rpiGPIO.c
projects/rpiGPIO/lib/: pigpio.cmake
projects/rpi_3,4_gpio/: rpi_gpio.c
projects/rpi_3_4_gpio/: rpi_gpio.c
projects/rpi_DHT11/: CMakeLists.txt  rpi_DHT11.c
projects/rpi_gpio/: CMakeLists.txt  rpi_gpio.c
projects/sampleApplication/: CMakeLists.txt  basic.c
projects/samples/: CMakeLists.txt  basic.c
samples/: CMakeLists.txt  basic.c
scripts/: clean_build_test.sh  make_test.sh
src/: iot_client.c  log.c  message_handler.c  tls_network.c  utils.c  utils.h  zoho_iot_client.c  zoho_log.c  zoho_message_handler.c  zoho_utils.c
src/samples/: basic.c  basic_tls.c  demo.c
test/: MqttConfig.json  MqttConfig_Wrong_Format.json  MqttConfig_Wrong_Params.json
test/dependency_tests/: cjson_test.c
test/dependency_tests/paho/: ping.c
test/unit/: CMakeLists.txt  sdk_basic_tests.c  wrap_functions.h
