#Uncomment the example entry `ADD_SUBDIRECTORY(exampleName)` that are required to build.

#1
    #Basic example with TLS:
    #ADD_SUBDIRECTORY(basic)
#2
    #Sample application Modbus protocol support
    #ADD_SUBDIRECTORY(modbusRequest)

#3
    #DHT11 on Raspberry Pi: temperature sensor sample
    #ADD_SUBDIRECTORY(rpi_DHT11)

# Include your own projects as sub-directories here
# ADD_SUBDIRECTORY(yourProject)