CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

SET(CA_CRT /usr/local/certs/ca.crt)
SET(CLIENT_CRT /usr/local/certs/client.crt)
SET(CLIENT_KEY /usr/local/certs/client.key)
# Set certificate include mode to REFERENCE or EMBED
SET(CRT_PARSE_MODE EMBED)

LIST(APPEND FEATURES "-DCRT_PARSE_MODE=${CRT_PARSE_MODE}")
IF(ENABLE_TLS)
    IF(CRT_PARSE_MODE STREQUAL REFERENCE)
        LIST(APPEND CERTS_PATH  "-DROOTCA_CERT_LOCATION=\"${CA_CRT}\"")
        LIST(APPEND FEATURES "-DREFERENCEMODE")
    ELSEIF(CRT_PARSE_MODE STREQUAL EMBED)
        LIST(APPEND CERTS ${CA_CRT})
        LIST(APPEND FEATURES "-DEMBEDMODE")
    ENDIF()
    IF(USE_CLIENT_CERTS)
        IF(CRT_PARSE_MODE STREQUAL REFERENCE)
            LIST(APPEND CERTS_PATH  "-DCLIENT_CERT_LOCATION=\"${CLIENT_CRT}\"" 
                                    "-DCLIENT_KEY_LOCATION=\"${CLIENT_KEY}\"")
        ELSEIF(CRT_PARSE_MODE STREQUAL EMBED)
            LIST(APPEND CERTS ${CLIENT_CRT} ${CLIENT_KEY})
            FILE(REMOVE ${PROJECT_SOURCE_DIR}/include/certificates.h)
            foreach(CERT ${CERTS})
                EXECUTE_PROCESS(COMMAND xxd -i ${CERT} ${PROJECT_SOURCE_DIR}/include/temp.txt)
                FILE(READ ${PROJECT_SOURCE_DIR}/include/temp.txt CONTENTS)
                FILE(APPEND ${PROJECT_SOURCE_DIR}/include/certificates.h "${CONTENTS}")
                FILE(REMOVE ${PROJECT_SOURCE_DIR}/include/temp.txt)
            endforeach(CERT)
        ELSE()
            MESSAGE(FATAL_ERROR "Enter proper CRT_PARSE_MODE")
        ENDIF()
    ENDIF(USE_CLIENT_CERTS)
ENDIF(ENABLE_TLS)

ADD_EXECUTABLE(basic_tls basic.c)
TARGET_COMPILE_DEFINITIONS (basic_tls PUBLIC ${FEATURES})
IF(ENABLE_TLS)
    TARGET_COMPILE_DEFINITIONS (basic_tls PUBLIC ${CERTS_PATH})
ENDIF(ENABLE_TLS)

TARGET_LINK_LIBRARIES(basic_tls zoho_iot_sdk)
